[AUR-6940] Porting of GeoTools ArcGIS ReST API and SDMX modules to Java 11 - Upgraded PowerMock - Changed factories to reflect changes in DataStoreFactorySpi - Allowed protected classes introspection during testing